--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -9,27 +9,39 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
     color: var(--common-text-color);
   }
 
 body {
-    background-color: lightgray;  
+    background-color: lightgray;
+    font-family: Arial, Helvetica, sans-serif;  
 }
+/** Header Stylings **/
 
-/** Header Styling **/
 header {
     background-color: black;
     height: 100px;
     display: flex;
 }
 
+.header-child{
+    height: 70px;
+    margin-top: 10px;
+    line-height: 2;
+    font-size: 40px;
+}
+
 header h1{
     background-color: var(--container-color);
+    width: 25%;
+    text-align: right;
+    color: black;
 }
 
 header nav {
-    
+    width: 50%;
+    margin-left: auto;
+    text-align: center;
 }
 
 header nav ul {
@@ -42,4 +54,27 @@ header nav ul li {
 
 header nav ul li a {
     color: var(--container-color);
+}
+
+/** Hero Stylings **/
+.hero{
+    height: 300px;
+    background-image: url("../images/hero.jpg");
+}
+
+.hero h2{
+    background-color: var(--container-color);
+    width: fit-content;
+    color: black;
+    font-size: 30px;
+    border: solid 3px var(--common-text-color);
+    position: relative;
+    top: 230px;
+    left: 80%;
+
+}
+
+/** Section Stylings **/
+.section{
+    display: flex;
 }
