--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -174,12 +174,7 @@ article p {
     width: 80%;
     list-style-type: none;
     display: inline-flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     line-height: 3;
 }
-
-/* @media screen and (max-width: 1120px) {
-    .work-content{
-        width: 60%;
-    }
-} */
